REF refactoring code 1