@@ -11,8 +11,8 @@ public class SquareTest {
     @Test
     public void countPointsInsideSquare() {
         //
-        Square square = Square.get(Point.get(10,10),3);
-        List<Point> points = List.of(Point.get(1,1), Point.get(10,10), Point.get(9,9));
+        Square square = Square.get(Point2D.get(10,10),3);
+        List<Point2D> points = List.of(Point2D.get(1,1), Point2D.get(10,10), Point2D.get(9,9));
 
         //
         long result = points.stream().filter(square::isInside).count();
@@ -25,15 +25,15 @@ public class SquareTest {
     public void countPointsInsideSquares() {
         //
         List<Square> squares = List.of(
-                Square.get(Point.get(10,10),3),
-                Square.get(Point.get(0,0),4));
-        List<Point> points = List.of(
-                Point.get(1,1),
-                Point.get(10,10),
-                Point.get(9,9));
+                Square.get(Point2D.get(10,10),3),
+                Square.get(Point2D.get(0,0),4));
+        List<Point2D> points = List.of(
+                Point2D.get(1,1),
+                Point2D.get(10,10),
+                Point2D.get(9,9));
 
         //
-        List<Point> results = points.stream().filter(point -> squares.stream().anyMatch(square -> square.isInside(point))).collect(Collectors.toList());
+        List<Point2D> results = points.stream().filter(point -> squares.stream().anyMatch(square -> square.isInside(point))).toList();
 
         //
         Assertions.assertEquals(results.size(), 3);
